--- a/index.html
+++ b/index.html
@@ -20,21 +20,61 @@
     <!-- include our JS+JSX for the React Appliccation -->
 <script type="text/babel">
 
-class Team extends React.Component {
+function Team(props){
+        let shotPercentageDiv
+        if (props.stats.shots){
+        const shotPercentage = Math.round((props.stats.score / props.stats.shots) * 100)
+            shotPercentageDiv = (
+                <div>
+                <strong>shooting %: {shotPercentage} </strong>
+            </div>
+            )
+        }
+        return(
+            <div className="Team">
+                <h2>{props.name}</h2>
+              <div className="identity"> 
+                <img src={props.logo} alt={props.name}/>
+            </div>
+
+            <div>
+             <strong>shots:</strong> {props.stats.shots}
+            </div>
+
+            <div>
+             <strong>score:</strong> {props.stats.score}
+            </div>
+
+            {shotPercentageDiv}
+
+            <button onClick={props.shotHandler}>shoot!</button>
+        </div>
+        )
+    }
+class Game extends React.Component {
     constructor(props) {
         super(props)
 
         this.state = {
-            shots: 0,
-            score: 0,
+            resetCount: 0,
+            homeTeamStats: {
+                shots: 0,
+                score: 0,
+            },
+            visitingTeamStats: {
+                shots: 0,
+                score: 0,
+            }
         }
 
         this.shotSound = new Audio("./assets/Bounces.mp3")
         this.scoreSound = new Audio("./assets/Back+Board.mp3")
         
     }
-    shotHandler = () => {
-        let score = this.state.score
+
+    shoot = (team) => {
+        const teamStatsKey = `${team}TeamStats`
+        let score = this.state[teamStatsKey].score
         this.shotSound.play()
 
         if (Math.random() > 0.5) {
@@ -47,65 +87,59 @@ class Team extends React.Component {
         }
 
         this.setState((state, props) => ({
-            shots: state.shots + 1,
+            [teamStatsKey] : {
+            shots: state[teamStatsKey].shots + 1,
             score
+            }
         }))
     }
-    render(){
-        let shotPercentageDiv
-        if (this.state.shots){
-        const shotPercentage = Math.round((this.state.score / this.state.shots) * 100)
-            shotPercentageDiv = (
-                <div>
-                <strong>shooting %: {shotPercentage} </strong>
-            </div>
-            )
-        }
-        return(
-            <div className="Team">
-                <h2>{this.props.name}</h2>
-              <div className="identity"> 
-                <img src={this.props.logo} alt={this.props.name}/>
-            </div>
 
-            <div>
-             <strong>shots:</strong> {this.state.shots}
-            </div>
-
-            <div>
-             <strong>score:</strong> {this.state.score}
-            </div>
-
-            {shotPercentageDiv}
-
-            <button onClick={this.shotHandler}>shoot!</button>
-        </div>
-        )
+    resetGame = () => {
+        this.setState((state, props) => ({
+            resetCount: state.resetCount + 1,
+            homeTeamStats: {
+                shots: 0,
+                score: 0
+            },
+            visitingTeamStats: {
+                shots: 0,
+                score: 0
+            }
+        }))
     }
-}
-function Game(props) {
+
+    render() {
     return (
         <div className="game">
-            <h1>Welcome to {props.venue}</h1>
+            <h1>Welcome to {this.props.venue}</h1>
             <div className="stats">
                 <Team
-                name={props.visitingTeam.name}
-                logo={props.visitingTeam.logoSrc}
+                name={this.props.visitingTeam.name}
+                logo={this.props.visitingTeam.logoSrc}
+                stats={this.state.visitingTeamStats}
+                shotHandler={() => this.shoot("visiting")}
                 />
 
 
                 <div className="versus">
                 <h1>VS</h1>
+                <div>
+                    <strong>Reset:</strong> {this.state.resetCount}
+                    <button onClick={this.resetGame}>Reset Game</button>
+                </div>
                 </div>
 
 
                 <Team
-                name={props.homeTeam.name}
-                logo={props.homeTeam.logoSrc}
+                name={this.props.homeTeam.name}
+                logo={this.props.homeTeam.logoSrc}
+                stats={this.state.homeTeamStats}
+                shotHandler={() => this.shoot("home")}
                 />
             </div>
         </div>
     )
+    }
 }
 // An App component under which all other components will be added
 function App (props) {
