--- a/index.html
+++ b/index.html
@@ -51,6 +51,24 @@ function Team(props){
         </div>
         )
     }
+
+    function ScoreBoard(props) {
+        return (
+            <div className="ScoreBoard">
+                <div className="teamStats">
+                    <h3>VISITORS</h3>
+                    <h3>{props.visitingTeamStats.score}</h3>
+                </div>
+
+                <h3>SCOREBOARD</h3>
+
+                <div className="teamStats">
+                    <h3>HOME</h3>
+                    <h3>{props.homeTeamStats.score}</h3>
+                </div>
+            </div>
+        )
+    }
 class Game extends React.Component {
     constructor(props) {
         super(props)
@@ -111,7 +129,11 @@ class Game extends React.Component {
     render() {
     return (
         <div className="game">
-            <h1>Welcome to {this.props.venue}</h1>
+            <ScoreBoard 
+                visitingTeamStats={this.state.visitingTeamStats}
+                homeTeamStats={this.state.homeTeamStats}
+            />
+            <h1 class="heading">Welcome to {this.props.venue}</h1>
             <div className="stats">
                 <Team
                 name={this.props.visitingTeam.name}
